@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods


class Store {
    id
    designation
    state
    district
    city
    portNumber
    zipCode
    emailAddress
    phoneNumber
}

class Company {
    description
}

class User {
    name
    email
    password
}

SystemAdministrator "1" -- "1" Company : has >
SystemAdministrator "1" - "*" Store : registers >
StoreManager "1" -- "1" Store : manages >
StoreNetworkManager "1" -- "1.." Store : manages >
SystemAdministrator "1" -- "1" User : is >

@enduml